--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "babel-plugin-root-import": "^6.4.1",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "history": "^4.10.1",
+    "immer": "^5.0.0",
     "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "reactotron-react-js": "^3.3.6",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.2",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "styled-components": "^4.4.1",
     "yup": "^0.27.0"
   },
